// gRPC server for CdnService (stub implementation)
use tonic::{Request, Response, Status};

pub mod nova {
    pub mod cdn_service {
        pub mod v1 {
            tonic::include_proto!("nova.cdn_service.v1");
        }
        pub use v1::*;
    }
}

use nova::cdn_service::v1::cdn_service_server::CdnService;
use nova::cdn_service::v1::*;

#[derive(Clone, Default)]
pub struct CdnServiceImpl;

#[tonic::async_trait]
impl CdnService for CdnServiceImpl {
    async fn generate_cdn_url(
        &self,
        _request: Request<GenerateCdnUrlRequest>,
    ) -> Result<Response<GenerateCdnUrlResponse>, Status> {
        Err(Status::unimplemented("generate_cdn_url not implemented"))
    }

    async fn get_cdn_asset(
        &self,
        _request: Request<GetCdnAssetRequest>,
    ) -> Result<Response<GetCdnAssetResponse>, Status> {
        Err(Status::unimplemented("get_cdn_asset not implemented"))
    }

    async fn register_cdn_asset(
        &self,
        _request: Request<RegisterCdnAssetRequest>,
    ) -> Result<Response<RegisterCdnAssetResponse>, Status> {
        Err(Status::unimplemented("register_cdn_asset not implemented"))
    }

    async fn update_cdn_asset(
        &self,
        _request: Request<UpdateCdnAssetRequest>,
    ) -> Result<Response<UpdateCdnAssetResponse>, Status> {
        Err(Status::unimplemented("update_cdn_asset not implemented"))
    }

    async fn invalidate_cache(
        &self,
        _request: Request<InvalidateCacheRequest>,
    ) -> Result<Response<InvalidateCacheResponse>, Status> {
        Err(Status::unimplemented("invalidate_cache not implemented"))
    }

    async fn invalidate_cache_pattern(
        &self,
        _request: Request<InvalidateCachePatternRequest>,
    ) -> Result<Response<InvalidateCachePatternResponse>, Status> {
        Err(Status::unimplemented("invalidate_cache_pattern not implemented"))
    }

    async fn get_cache_invalidation_status(
        &self,
        _request: Request<GetCacheInvalidationStatusRequest>,
    ) -> Result<Response<GetCacheInvalidationStatusResponse>, Status> {
        Err(Status::unimplemented(
            "get_cache_invalidation_status not implemented",
        ))
    }

    async fn get_cdn_usage_stats(
        &self,
        _request: Request<GetCdnUsageStatsRequest>,
    ) -> Result<Response<GetCdnUsageStatsResponse>, Status> {
        Err(Status::unimplemented("get_cdn_usage_stats not implemented"))
    }

    async fn get_edge_locations(
        &self,
        _request: Request<GetEdgeLocationsRequest>,
    ) -> Result<Response<GetEdgeLocationsResponse>, Status> {
        Err(Status::unimplemented("get_edge_locations not implemented"))
    }

    async fn prewarm_cache(
        &self,
        _request: Request<PrewarmCacheRequest>,
    ) -> Result<Response<PrewarmCacheResponse>, Status> {
        Err(Status::unimplemented("prewarm_cache not implemented"))
    }

    async fn get_deployment_status(
        &self,
        _request: Request<GetDeploymentStatusRequest>,
    ) -> Result<Response<GetDeploymentStatusResponse>, Status> {
        Err(Status::unimplemented("get_deployment_status not implemented"))
    }

    async fn get_cdn_metrics(
        &self,
        _request: Request<GetCdnMetricsRequest>,
    ) -> Result<Response<GetCdnMetricsResponse>, Status> {
        Err(Status::unimplemented("get_cdn_metrics not implemented"))
    }
}

